@@ -25,6 +25,7 @@ $ 9.6
   _ 2012-04-xx
     * Show prev/next page buttons on smaller screens
     * More translations (let me know if you find errors)
+    * ThinkPad Tablet pen button (thanks to Ivan Tsybankov)
 $ 9.5
   % Version 9.5
   _ 2012-03-28
